@@ -515,8 +515,10 @@ fi
 %{__prefix}/include/popt.h
 
 %changelog
-* Thu May 23 2002 Jeff Johnson <jbj@redhat.com> 4.1-0.16
+* Fri May 24 2002 Jeff Johnson <jbj@redhat.com> 4.1-0.16
 - add rpmds/rpmfi/rpmts methods to bindings.
+- re-enable rpm-python sub-package.
+- fix: resurrect "()(64bit)" markings using objdump.
 
 * Sun May 19 2002 Jeff Johnson <jbj@redhat.com> 4.1-0.15
 - Grand Renaming of rpm data types.
